[package]
name = "win_service"
version = "0.1.0"
authors = ["ardavis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["winsvc", "winerror", "winuser"] }
log = "0.4.8"
widestring = "0.4.0"
env_logger = "0.7.*"